build_log.txt
Command line invocation:
    /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild -scheme Elements -destination platform=macOS build

2026-01-16 08:23:49.025 xcodebuild[15910:156868] [MT] IDERunDestination: Supported platforms for the buildables in the current scheme is empty.
--- xcodebuild: WARNING: Using the first of multiple matching destinations:
{ platform:macOS, arch:arm64, id:00008122-000A48D40EA1001C, name:My Mac }
{ platform:macOS, arch:x86_64, id:00008122-000A48D40EA1001C, name:My Mac }
ComputePackagePrebuildTargetDependencyGraph

Prepare packages

CreateBuildRequest

SendProjectDescription

CreateBuildOperation

ComputeTargetDependencyGraph
note: Building targets in dependency order
note: Target dependency graph (1 target)
    Target 'Elements' in project 'Elements' (no dependencies)

GatherProvisioningInputs

CreateBuildDescription

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -v -E -dM -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk -x c -c /dev/null

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/usr/bin/actool --version --output-format xml1

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc --version

ExecuteExternalTool /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ld -version_details

Build description signature: 0b7ffd18734daf8c0efe05dcd0b3fd41
Build description path: /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/XCBuildData/0b7ffd18734daf8c0efe05dcd0b3fd41.xcbuilddata
ClangStatCache /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang-stat-cache /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk /Users/yousef/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache
    cd /Users/yousef/Desktop/Water/Elements.xcodeproj
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang-stat-cache /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk -o /Users/yousef/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache

SwiftDriver Elements normal arm64 com.apple.xcode.tools.swift.compiler (in target 'Elements' from project 'Elements')
    cd /Users/yousef/Desktop/Water
    builtin-SwiftDriver -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name Elements -Onone -enforce-exclusivity\=checked @/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Objects-normal/arm64/Elements.SwiftFileList -DDEBUG -default-isolation\=MainActor -enable-bare-slash-regex -enable-upcoming-feature DisableOutwardActorInference -enable-upcoming-feature InferSendableFromCaptures -enable-upcoming-feature GlobalActorIsolatedTypesUsability -enable-upcoming-feature MemberImportVisibility -enable-upcoming-feature InferIsolatedConformances -enable-upcoming-feature NonisolatedNonsendingByDefault -enable-experimental-feature DebugDescriptionMacro -sdk /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.2.sdk -target arm64-apple-macos26.2 -g -module-cache-path /Users/yousef/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -Xfrontend -serialize-debugging-options -enable-testing -index-store-path /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Index.noindex/DataStore -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -swift-version 5 -I /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Products/Debug -F /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Products/Debug -emit-localized-strings -emit-localized-strings-path /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Objects-normal/arm64 -c -j8 -enable-batch-mode -incremental -Xcc -ivfsstatcache -Xcc /Users/yousef/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/macosx26.2-25C57-3885c01c3e6b6a337905948deab2002e00fa09913b459cbbc988d1f6730289ae.sdkstatcache -output-file-map /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Objects-normal/arm64/Elements-OutputFileMap.json -use-frontend-parseable-output -save-temps -no-color-diagnostics -explicit-module-build -module-cache-path /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -clang-scanner-module-cache-path /Users/yousef/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -sdk-module-cache-path /Users/yousef/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -serialize-diagnostics -emit-dependencies -emit-module -emit-module-path /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Objects-normal/arm64/Elements.swiftmodule -validate-clang-modules-once -clang-build-session-file /Users/yousef/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/swift-overrides.hmap -emit-const-values -Xfrontend -const-gather-protocols-file -Xfrontend /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Objects-normal/arm64/Elements_const_extract_protocols.json -Xcc -iquote -Xcc /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Elements-generated-files.hmap -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Elements-own-target-headers.hmap -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Elements-all-target-headers.hmap -Xcc -iquote -Xcc /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Elements-project-headers.hmap -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Products/Debug/include -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/DerivedSources-normal/arm64 -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/DerivedSources/arm64 -Xcc -I/Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/DerivedSources -Xcc -DDEBUG\=1 -emit-objc-header -emit-objc-header-path /Users/yousef/Library/Developer/Xcode/DerivedData/Elements-bjntjzpeqohdstajlnyilblqyceg/Build/Intermediates.noindex/Elements.build/Debug/Elements.build/Objects-normal/arm64/Elements-Swift.h -working-directory /Users/yousef/Desktop/Water -experimental-emit-module-separately -disable-cmo
/Users/yousef/Desktop/Water/Elements/ClothView.swift:83:5: error: extraneous '}' at top level
    }
    ^
    
/Users/yousef/Desktop/Water/Elements/ClothView.swift:84:1: error: extraneous '}' at top level
}
^
/Users/yousef/Desktop/Water/Elements/ClothView.swift:83:5: error: Extraneous '}' at top level
    }
    ^
     (in target 'Elements' from project 'Elements')
/Users/yousef/Desktop/Water/Elements/ClothView.swift:84:1: error: Extraneous '}' at top level
}
^ (in target 'Elements' from project 'Elements')

** BUILD FAILED **


The following build commands failed:
	SwiftDriver Elements normal arm64 com.apple.xcode.tools.swift.compiler (in target 'Elements' from project 'Elements')
	Building project Elements with scheme Elements
(2 failures)
